--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,13 @@ header {
   padding: 20px;
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
+  display: flex;
+  width: 1240px;
+  height: 68px;
+  /* justify-content: center; */
+  /* align-items: center; */
+  gap: 720.678px;
 }
 
 header img {
@@ -44,16 +51,22 @@ nav a:hover {
 
 /* Hero */
 .hero {
-  background-image: url('../assets/hero-image.jpg'); /* Remplace par le chemin de ton image */
+  background-image: url('./assets/images/recife.jpg'); /* Remplace par le chemin de ton image */
   background-size: cover;
   background-position: center;
-  height: 300px;
   display: flex;
   align-items: center;
   justify-content: center;
   color: white;
   text-align: center;
   padding: 20px;
+
+  width: 1240px;
+  height: 223px;
+  border-radius: 25px;
+  opacity: 0.6;
+  /* background: #000; */
+  mix-blend-mode: darken;
 }
 
 .hero-title {
@@ -90,13 +103,76 @@ nav a:hover {
   text-align: center;
 }
 
+/* Article*/
+/* Style pour le conteneur principal */
+.container {
+  width: 1240px;
+  height: 829px;
+  background-color: #f6f6f6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Style pour le wrapper des articles */
+.articles-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px; /* Espace entre les articles */
+  justify-content: center;
+}
+
+/* Style pour chaque article */
+.article {
+  width: 340px;
+  height: 340px;
+  background-color: #ff6060;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+/* Style pour l'image dans l'article */
+.article img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover; /* Pour que l'image remplisse correctement l'espace */
+}
+
+/* Style pour le titre h3 */
+.article h3 {
+  margin: 10px 0;
+  color: white;
+  font-size: 18px;
+}
+
+/* Style pour le paragraphe */
+.article p {
+  margin: 0;
+  color: white;
+  font-size: 14px;
+}
+
+
 /* Footer */
 footer {
   background-color: black;
   color: white;
   text-align: center;
-  padding: 20px;
+
   margin-top: 40px;
+
+
+  display: flex;
+  width: auto;
+  height: 209px;
+  padding: 66px 464px 29px 463px;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 28.556px;
 }
 
 /* Styles supplémentaires pour les animations (optionnel) */
